--- a/index.html
+++ b/index.html
@@ -13,39 +13,13 @@
 
 </head>
 <body>
-        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-failure mt-4 d-flex justify-content-center">
-                <img src="assets/images/trivia.jpg" class="image img-responsive">
-              
-        </nav>
-     -->
+  
       <div class="container mainDiv">
             <h3 class="mainHeading">Trivia Game</h3>
-            <div id="mainDiv">
-
-            </div> 
-        <!-- <div class="container" id="mainDiv"> -->
-         <!--  row -->
-    <!-- </div> -->
-
-       <!-- <div class="row d-flex justify-content-center">
-           <div id="displayQA">
-
-           </div>
-
-           <div id="displayR">
-
-            </div>
-       </div> -->
-
+            <div id="mainDiv"></div> 
       </div>
      
-
-
-<!-- <script src="https://cdn.jsdelivr.net/jquery.color-animation/1/mainfile"></script> -->
 <script src="assets/javascript/app.js"></script>
- 
-
-
 
 </body>
 </html>
