--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   
       <div class="container mainDiv">
             <h3 class="mainHeading">Trivia Game</h3>
-            <div id="mainDiv"></div> 
+            <div id="mainDiv">
+</div> 
       </div>
      
 <script src="assets/javascript/app.js"></script>
